--- a/Python/Django Projects/travelwebsite/templates/index.html
+++ b/Python/Django Projects/travelwebsite/templates/index.html
@@ -5,11 +5,8 @@
 {% block content %}
 
 <!-- Home -->
-{% for message in messages%}
-        <h3> {{ message }}</h3>
-{% endfor %}
-<div class="home">
 
+<div class="home">
 	<!-- Home Slider -->
 	<div class="home_slider_container">
 		<div class="owl-carousel owl-theme home_slider">
@@ -43,30 +40,7 @@
 	</div>
 </div>
 
-<!-- Search -->
-
-<div class="home_search">
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<div class="home_search_container">
-					<div class="home_search_title">Search for your trip</div>
-					<div class="home_search_content">
-						<form action="#" class="home_search_form" id="home_search_form">
-							<div class="d-flex flex-lg-row flex-column align-items-start justify-content-lg-between justify-content-start">
-								<input type="text" class="search_input search_input_1" placeholder="City" required="required">
-								<input type="text" class="search_input search_input_2" placeholder="Departure" required="required">
-								<input type="text" class="search_input search_input_3" placeholder="Arrival" required="required">
-								<input type="text" class="search_input search_input_4" placeholder="Budget" required="required">
-								<button class="home_search_button">search</button>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+{% include 'partials/search_content.html' %}
 
 <!-- Intro -->
 
