category add for destination

--- a/Python/Django Projects/travelwebsite/templates/base.html
+++ b/Python/Django Projects/travelwebsite/templates/base.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles/about_responsive.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/news.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/news_responsive.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/destinations.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/destinations_responsive.css' %}">
 </head>
 <body>
 
@@ -181,5 +183,6 @@
 <script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
 <script src="{% static 'js/about.js' %}"></script>
 <script src="{% static 'js/news.js' %}"></script>
+<script src="{% static 'js/destinations.js' %}"></script>
 </body>
 </html>
