--- a/Python/Django Projects/travelwebsite/templates/partials/search_content.html
+++ b/Python/Django Projects/travelwebsite/templates/partials/search_content.html
@@ -7,7 +7,7 @@
                 <div class="home_search_container">
                     <div class="home_search_title">Search for your trip</div>
                     <div class="home_search_content">
-                        <form action="search" method="post" class="home_search_form" id="home_search_form">
+                        <form action="destinations" method="post" class="home_search_form" id="home_search_form">
                             <div class="d-flex flex-lg-row flex-column align-items-start justify-content-lg-between justify-content-start">
                                 {% csrf_token %}
                                 <input type="text" name="city" class="search_input search_input_1" placeholder="City" required="required">
