travel website ajax json working on contact msg submit

--- a/Python/Django Projects/travelwebsite/templates/about.html
+++ b/Python/Django Projects/travelwebsite/templates/about.html
@@ -25,70 +25,27 @@
         <div class="row about_row">
             <div class="col-lg-6">
                 <div class="about_content">
-                    <div class="text_highlight">Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo. Vivamus massa.Tempor massa et laoreet .Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+
+<!--                    {{ab.brief | safe}}-->
+                    <div class="text_highlight">{{field | safe }}</div>
                     <div class="about_text">
-                        <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo. Vivamus massa.Tempor massa et laoreet .Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu laoreet ante, sollicitudin volutpat quam. Vestibulum posuere malesuada ultrices. In pulvinar rhoncus lacus at aliquet. Nunc vitae lacus varius, auctor nisi sit amet, consectetur mauris. Curabitur sodales semper est, vel faucibus urna laoreet vel. Ut justo diam, sodales non pulvinar at, vulputate quis neque. Etiam aliquam purus vel ultricies consequat.</p>
+                        {{ ab | safe}}
                     </div>
-                    <div class="button about_button"><a href="#">read more</a></div>
+                    <div class="button about_button" data-toggle="modal" data-target="#myModal"><a href="#">read more</a></div>
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="about_image"><img src="{% static 'images/about_1.jpg'%}" alt=""></div>
+                <div class="about_image"><img src="{{abs.aboutimg.url}}" alt=""></div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Milestones -->
-
-<div class="milestones">
-    <div class="container">
-        <div class="row">
-
-            <!-- Milestone -->
-            <div class="col-lg-3 milestone_col">
-                <div class="milestone text-center">
-                    <div class="milestone_icon"><img src="{% static 'images/mountain.svg' %}" alt=""></div>
-                    <div class="milestone_counter" data-end-value="17">0</div>
-                    <div class="milestone_text">Online Courses</div>
-                </div>
-            </div>
-
-            <!-- Milestone -->
-            <div class="col-lg-3 milestone_col">
-                <div class="milestone text-center">
-                    <div class="milestone_icon"><img src="{% static 'images/island.svg'%}" alt=""></div>
-                    <div class="milestone_counter" data-end-value="213">0</div>
-                    <div class="milestone_text">Students</div>
-                </div>
-            </div>
-
-            <!-- Milestone -->
-            <div class="col-lg-3 milestone_col">
-                <div class="milestone text-center">
-                    <div class="milestone_icon"><img src="{% static 'images/camera.svg'%}" alt=""></div>
-                    <div class="milestone_counter" data-end-value="11923">0</div>
-                    <div class="milestone_text">Teachers</div>
-                </div>
-            </div>
-
-            <!-- Milestone -->
-            <div class="col-lg-3 milestone_col">
-                <div class="milestone text-center">
-                    <div class="milestone_icon"><img src="{% static 'images/boat.svg'%}" alt=""></div>
-                    <div class="milestone_counter" data-end-value="15">0</div>
-                    <div class="milestone_text">Countries</div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
 
 <!-- Why Choose Us -->
 
 <div class="why">
-    <div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="{% static 'images/why.jpg'%}" data-speed="0.8"></div>
+    <div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="{{abs.whybackground.url}}" data-speed="0.8"></div>
     <div class="container">
         <div class="row">
             <div class="col text-center">
@@ -99,58 +56,25 @@
         <div class="row why_row">
 
             <!-- Why item -->
+            {% for wh in why %}
             <div class="col-lg-4 why_col">
                 <div class="why_item">
                     <div class="why_image">
-                        <img src="{% static 'images/why_1.jpg'%}" alt="">
+                        <img src="{{wh.img.url}}" alt="">
                         <div class="why_icon d-flex flex-column align-items-center justify-content-center">
-                            <img src="{% static 'images/why_1.svg'%}" alt="">
+                            <img src="{{wh.icon.url}}" alt="">
                         </div>
                     </div>
                     <div class="why_content text-center">
-                        <div class="why_title">Fast Services</div>
+                        <div class="why_title">{{wh.title}}</div>
                         <div class="why_text">
-                            <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
+                            <p>{{wh.shortdesc}}</p>
                         </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
 
-            <!-- Why item -->
-            <div class="col-lg-4 why_col">
-                <div class="why_item">
-                    <div class="why_image">
-                        <img src="{% static 'images/why_2.jpg'%}" alt="">
-                        <div class="why_icon d-flex flex-column align-items-center justify-content-center">
-                            <img src="{% static 'images/why_2.svg'%}" alt="">
-                        </div>
-                    </div>
-                    <div class="why_content text-center">
-                        <div class="why_title">Great Team</div>
-                        <div class="why_text">
-                            <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Why item -->
-            <div class="col-lg-4 why_col">
-                <div class="why_item">
-                    <div class="why_image">
-                        <img src="{% static 'images/why_3.jpg'%}" alt="">
-                        <div class="why_icon d-flex flex-column align-items-center justify-content-center">
-                            <img src="{% static 'images/why_3.svg'%}" alt="">
-                        </div>
-                    </div>
-                    <div class="why_content text-center">
-                        <div class="why_title">Best Deals</div>
-                        <div class="why_text">
-                            <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </div>
     </div>
@@ -169,57 +93,40 @@
         <div class="row team_row">
 
             <!-- Team Item -->
+            {% for te in team %}
             <div class="col-xl-3 col-md-6 team_col">
                 <div class="team_item d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="team_image"><img src="{% static 'images/team_1.jpg'%}" alt=""></div>
+                    <div class="team_image"><img src="{{te.img.url}}" alt=""></div>
                     <div class="team_content">
-                        <div class="team_title"><a href="#">Margaret Smith</a></div>
+                        <div class="team_title"><a href="#">{{te.name}}</a></div>
                         <div class="team_text">
-                            <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo. Vivamus massa.</p>
+                            <p>{{te.shortdesc}}</p>
                         </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
 
-            <!-- Team Item -->
-            <div class="col-xl-3 col-md-6 team_col">
-                <div class="team_item d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="team_image"><img src="{% static 'images/team_2.jpg'%}" alt=""></div>
-                    <div class="team_content">
-                        <div class="team_title"><a href="#">James Williams</a></div>
-                        <div class="team_text">
-                            <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo. Vivamus massa.</p>
-                        </div>
-                    </div>
-                </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">About</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-
-            <!-- Team Item -->
-            <div class="col-xl-3 col-md-6 team_col">
-                <div class="team_item d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="team_image"><img src="{% static 'images/team_3.jpg'%}" alt=""></div>
-                    <div class="team_content">
-                        <div class="team_title"><a href="#">Michael James</a></div>
-                        <div class="team_text">
-                            <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo. Vivamus massa.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="modal-body">
+                {{ abs.brief | safe}}
             </div>
-
-            <!-- Team Item -->
-            <div class="col-xl-3 col-md-6 team_col">
-                <div class="team_item d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="team_image"><img src="{% static 'images/team_4.jpg'%}" alt=""></div>
-                    <div class="team_content">
-                        <div class="team_title"><a href="#">Noah Smith</a></div>
-                        <div class="team_text">
-                            <p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo. Vivamus massa.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+<!--                <button type="button" class="btn btn-primary">Save changes</button>-->
             </div>
-
         </div>
     </div>
 </div>
