travel website almost done

--- a/Python/Django Projects/travelwebsite/templates/base.html
+++ b/Python/Django Projects/travelwebsite/templates/base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles/news_responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/destinations.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/destinations_responsive.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" ></script>
 </head>
 <body>
 
@@ -164,7 +165,7 @@
     </footer>
 </div>
 
-<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<!--<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>-->
 <script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
 <script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
 <script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
