--- a/Python/Django Projects/travelwebsite/templates/contact.html
+++ b/Python/Django Projects/travelwebsite/templates/contact.html
@@ -46,7 +46,7 @@
             <!-- Contact Form -->
             <div class="col-lg-6">
                 <div class="contact_form_container">
-                    <form id="contact_form" class="contact_form" method="post">
+                    <form id="contact_form" class="contact_form" method="post" action="/sendmsg">
                         {% csrf_token %}
                         <div style="margin-bottom: 18px"><input type="text" class="contact_input contact_input_name inpt" name="name" placeholder="Your Name" required="required"><div class="input_border"></div></div>
                         <div class="row">
