--- a/Python/Django Projects/travelwebsite/templates/news_details.html
+++ b/Python/Django Projects/travelwebsite/templates/news_details.html
@@ -23,7 +23,6 @@
                 <div class="news_container">
 
                     <!-- News Post -->
-                    {% for news in newsall %}
                     <div class="news_post">
                         <div class="news_post_image"><img src="{{ news.img.url }}" alt=""></div>
                         <div class="news_post_content">
@@ -31,7 +30,7 @@
                                 <div>{{news.date|date:'d'}}</div>
                                 <div>{{news.date|date:'M'}}</div>
                             </div>
-                            <div class="news_post_title"><a href="{% url 'news_details' news.slug %}">{{news.title}}</a></div>
+                            <div class="news_post_title"><a href="#">{{news.title}}</a></div>
                             <div class="news_post_category">
                                 <ul>
                                     <li><a href="#">{{news.newscat}}</a></li>
@@ -39,44 +38,15 @@
                             </div>
                             <div class="news_post_text">
 
-                                    {% if news.desc|length > 100 %}
-                                    {{news.desc|slice:180| safe}}...
-                                    {% else  %}
-                                    {{news.desc| safe }}
-                                    {% endif %}
+                                {{news.desc| safe }}
 
                             </div>
-                            <div class="news_post_link"><a href="{% url 'news_details' news.slug %}">Read More</a></div>
                         </div>
                     </div>
-                    {% endfor %}
 
                 </div>
 
-                <!-- Pagination -->
-                {% if newsall.has_other_pages %}
-                <div class="pagination">
-                    <ul class="d-flex flex-row align-items-start justify-content-start">
-                        {% if newsall.has_previous %}
-                        <li><a href="?page={{ newsall.previous_page_number }}">&laquo;</a></li>
-                        {% else %}
-                        <li class="disabled"><span>&laquo;</span></li>
-                        {% endif %}
-                        {% for i in newsall.paginator.page_range %}
-                        {% if newsall.number == i %}
-                        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-                        {% else %}
-                        <li><a href="?page={{ i }}">{{ i }}</a></li>
-                        {% endif %}
-                        {% endfor %}
-                        {% if newsall.has_next %}
-                        <li><a href="?page={{ newsall.next_page_number }}">&raquo;</a></li>
-                        {% else %}
-                        <li class="disabled"><span>&raquo;</span></li>
-                        {% endif %}
-                    </ul>
-                </div>
-                {% endif %}
+
             </div>
 
             <!-- News Sidebar -->
